[lab17] fix: adapt to Java 17